fixed spacing

--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-*{
-    
-}
-
 @font-face {
     font-family: "Neue Haas";
     src: url(./fonts/NeueHaasGrotDisp-45Light-Trial.otf);
@@ -11,6 +7,7 @@ body{
     font-family: "Neue Haas";
     text-align: left;
     margin: 0;
+    background-color: #344e41;
 }
 
 .header, ul, .desc, .subheader, .image_row, .image_with_text, .testimonial, .contact_us, .header_text{
@@ -25,7 +22,7 @@ body{
 .header{
     justify-content: space-around;
     align-items: center;
-    padding: 16px;
+    
 }
 
 .header_text{
@@ -34,6 +31,17 @@ body{
     justify-content: space-between;
     align-items: center;
 }
+
+.divider {
+    border: none;          
+    height: 2px;
+    background-color: white; 
+    width: 1600px;
+    display: block;        
+}
+
+
+
 
 
 ul{
@@ -83,8 +91,6 @@ ul{
     height: 300px;
 
     margin: auto;
-
-    
 }
 .s2{
     display: flex;
@@ -150,7 +156,7 @@ em{
 .contact_us{
     background-color: #344e41;
     color: white;
-    width: 800px;
+    width: 900px;
     height: 100px;
     
     justify-content: space-between;
